2002-12-04  James Willcox  <jwillcox@gnome.org>

	* dialogs/gedit-dialog-goto-line.c: (dialog_goto_line_get_dialog):
	* dialogs/gedit-encodings-dialog.c: (get_encodings_dialog):
	* dialogs/gedit-plugin-program-location-dialog.c:
	(gedit_plugin_program_location_dialog):

	Fix some string stuff to make it easier on translators.  (Bug #99660)

2002-12-04  Paolo Maggi <maggi@athena.polito.it>

	* gedit-commands.[ch] (gedit_cmd_documents_move_to_new_window): new function

	* gedit-mdi.c (gedit_mdi_set_active_window_verbs_sensitivity): set the sensitivity
	of DocumentsMoveToNewWindow verb

	* gedit-menus.c: added DocumentsMoveToNewWindow to gedit_verbs and 
	gedit_menus_no_docs_sensible_verb

	* gedit-ui.xml: added a "Move to New Window" item to the Documents menu
	
2002-12-03  Paolo Maggi <maggi@athena.polito.it>

	* gedit-commands.c (TO_BE_IMPLEMENTED): removed
	(gedit_cmd_search_find_again): fixed to support "wrap around"

	* gedit-document.c (gedit_document_find): fix a bug in the case
	you are searching an entire word 
	(gedit_document_find_again): added a from cursor parameter

	* gedit-document.h (gedit_document_find_again): ditto

	* gedit2.h (GBOOLEAN_TO_POINTER)(GPOINTER_TO_BOOLEAN): #defined

	* dialogs/gedit-dialogs.h (gedit_was_wrap_around_quark): new function

	* dialogs/gedit-dialog-replace.c: fixed according to ui-review

	* dialogs/replace.glade2: ditto

2002-12-03  Paolo Maggi <maggi@athena.polito.it>

	* gedit-plugins-engine.c (gedit_plugins_engine_load): free 
	gedit_plugin_file (fix bug #100021, thanks to Kjartan Maraas
	and Martin Hostettler for the patch)

2002-11-28  Paolo Maggi <maggi@athena.polito.it>

	* gedit-plugins-engine.c (gedit_plugins_engine_activate_plugin)
	(gedit_plugins_engine_reactivate_all): initialize r to PLUGIN_OK

	* gedit-mdi-child.c (gedit_mdi_child_set_label): fix tooltips and
	context menu

	bonobo-mdi.c: fix drag and drop of tabs

2002-11-27  Paolo Maggi <maggi@athena.polito.it>

	* gedit-file.c: